--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "gulp-sass": "^5.1.0",
     "gulp-uglify-es": "^2.0.0",
     "sass": "^1.58.0"
+  },
+  "dependencies": {
+    "imask": "^7.1.3"
   }
 }
